# DRHP

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  weekly-pipeline.yml
assets/: app.css  app.js
data/: latest.json  tracker_appendix.xlsx
data/snapshots/: 2026-06-30.json
docs/: DATA_CONTRACT.md
public/: index.html
public/assets/: app.css
public/data/: latest.json  tracker_appendix.xlsx
src/drhp_pipeline/: __init__.py  contract.py  emit.py  financials.py  ipo_market.py  pdf_extract.py  pipeline.py  resolve.py  scoring.py  scraper.py  sectors.py  snapshot.py  websearch.py  weeklogic.py
tests/: test_contract.py  test_emit.py  test_financials.py  test_ipo_market.py  test_pdf_extract.py  test_pipeline.py  test_resolve.py  test_scoring.py  test_scraper.py  test_snapshot.py  test_weeklogic.py
tests/fixtures/: nse_current.json  nse_past.json  nse_upcoming.json  sebi_drhp_sample.html  sebi_ipo_sample.html
