[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drhp-pipeline"
version = "0.1.0"
description = "Weekly SEBI DRHP/IPO investment-monitor data pipeline"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic>=2.6",
    "python-dateutil>=2.9",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]  # optional headless-scrape fallback
dev = ["pytest>=8.0"]

[project.scripts]
drhp-pipeline = "drhp_pipeline.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
